links added and picture added

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>About | Your Name</title>
+  <title>About | Jon Finley</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -18,7 +18,7 @@
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
+      <a href="index.html" id="logo">Jon Finley</a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
@@ -31,13 +31,13 @@
     <section class="main-section">
       <h1>About Me</h1>
 
-      <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
+      <img src="assets/images/portpic.jpg" class="auth-image" alt="Your Name">
 
-      <p>Lorem ipsum s felis, ac rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra.  purus vitae sollicitudin consectetur.</p>
+      <p>Hi Im Jon Finley Here is a bit about me I have a Bacholor of Arts, Minor in Math, Minor in Business at the University of Tennessee </p>
 
-      <p>Done lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id eros iaculis, pulvinar quam eget, egestas mauris.</p>
+      <p>Intrests are in 3-d printing, 3-d Modeling, drafting, Programing, Assembly and Managment</p>
 
-      <p>Suspendisse dictum, oque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+      <!-- <p>Suspendisse dictum, oque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p> -->
 
     </section>
 
