--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Portfolio | Your Name</title>
+  <title>Portfolio | Jon Finley</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -19,7 +19,7 @@
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
+      <a href="index.html" id="logo">Jon Finley</a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
@@ -33,29 +33,44 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
+         <a href="https://jonfinley211.github.io/unit-4-game/ ">
 
-        <h3>Word Guess</h3>
+        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Crystal game" >
+
+        <h3>Crystal Game</h3>
+         </a>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+          <a href="https://jonfinley211.github.io/letsGitGiphy/ ">
+        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="lets get giphy">
 
-        <h3>RPG Game</h3>
+        <!-- <h3>RPG Game</h3> -->
+        <h3>Lets Get Giphy</h3>
+        <!-- <a href="https://jonfinley211.github.io/letsGitGiphy/ "></a>-->
+          </a>
       </div>
       <div class="work">
+          <a href= "https://jonfinley211.github.io/TriviaGame/" >
         <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
 
         <h3>Trivia Game</h3>
+        <!--<a href= "https://jonfinley211.github.io/TriviaGame/" ></a>-->
+      </a>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+          <a href= "https://jonfinley211.github.io/Project1/">
+        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="travelHub">
 
-        <h3>Rutgers Info Widget</h3>
+        <h3>travelHub</h3>
+        <!--<a href= "https://jonfinley211.github.io/Project1/"></a> -->
+      </a>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+        <a href="https://jonfinley211.github.io/Train-Scheduler/">
+        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Train Times">
 
-        <h3>Rock Paper Scissors</h3>
+        <h3>Train Times</h3>
+        </a>
       </div>
 
     </section>
