links added and picture added

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,14 +35,14 @@
       <div class="work">
          <a href="https://jonfinley211.github.io/unit-4-game/ ">
 
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Crystal game" >
+        <img src="assets/images/crystalgamethumb.png" alt="Crystal game" >
 
         <h3>Crystal Game</h3>
          </a>
       </div>
       <div class="work">
           <a href="https://jonfinley211.github.io/letsGitGiphy/ ">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="lets get giphy">
+        <img src="assets/images/letsgetgifythumb.png" alt="lets get giphy">
 
         <!-- <h3>RPG Game</h3> -->
         <h3>Lets Get Giphy</h3>
@@ -51,7 +51,7 @@
       </div>
       <div class="work">
           <a href= "https://jonfinley211.github.io/TriviaGame/" >
-        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+        <img src="assets/images/triviagamethumb.png" alt="Trivia Game">
 
         <h3>Trivia Game</h3>
         <!--<a href= "https://jonfinley211.github.io/TriviaGame/" ></a>-->
@@ -59,7 +59,7 @@
       </div>
       <div class="work">
           <a href= "https://jonfinley211.github.io/Project1/">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="travelHub">
+        <img src="assets/images/travelhubthumb.png" alt="travelHub">
 
         <h3>travelHub</h3>
         <!--<a href= "https://jonfinley211.github.io/Project1/"></a> -->
@@ -67,7 +67,7 @@
       </div>
       <div class="work">
         <a href="https://jonfinley211.github.io/Train-Scheduler/">
-        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Train Times">
+        <img src="assets/images/trainscedulertumbnail.png" alt="Train Times">
 
         <h3>Train Times</h3>
         </a>
