--- a/index.html
+++ b/index.html
@@ -33,9 +33,55 @@
 
       <img src="assets/images/portpic.jpg" class="auth-image" alt="Your Name">
 
-      <p>Hi Im Jon Finley Here is a bit about me I have a Bacholor of Arts, Minor in Math, Minor in Business at the University of Tennessee </p>
+      <h2>
+        Nashville, TN 
+        <br>
+        865.368.5440 (cell)
+        <br>
+        lilfin19@gmail.com
+      </h2>
+      <br>
+      <br>
+      
+<hl>
+  <h2>Skills</h2>
+<pre>Management, Management Training and Leadership Development.  
+Sales Development and Strategies
+excellent problem solving skills
+Adobe suites, Excel, Powerpoint, Word, Publisher Maya, POS Systems, Quickbooks
+       <h2>Places</h2><hl> 
+<b>Animax Designs</b>  
+Assembly technician
+March 2019- May 2019
+Animatronics assembly Machining, Keenserts, Hilocks, rivets and other aerospace assemblies.
 
-      <p>Intrests are in 3-d printing, 3-d Modeling, drafting, Programing, Assembly and Managment</p>
+<b>Electronic Insiders</b>
+Manager
+January  2018- Jan 2019  
+Managing business and team Running Cables and working on low Voltage Electronics. 
+Mounting TVs, running Electric as well as ethernet and coax. 
+Installing speakers, sound systems and wiring racks. 
+
+<b>Office Depot Inc/ Office Max</b> 
+Nashville, TN area
+Manager
+October 2013- Dec-2017  
+Responsibilities include but not limited to:  
+Managing Associates in the areas of Computer Technical Services, Shipping/Receiving
+Improve efficiency of operations within  my areas of responsibility.
+Training of new associates to achieve top levels of performance.
+
+<b>Urbancaveman</b>
+Franklin, TN 
+Resource Manager 
+2011 - 2013
+Supplier of specialty gaming products for a niche market.
+Owned and managed  a small internet business using most up-to-date resources
+ to improve profit, using shipping technology.
+      </pre>
+        <p>
+
+        </p>
 
       <!-- <p>Suspendisse dictum, oque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p> -->
 
@@ -45,7 +91,7 @@
 
   <footer>
     <div class="container">
-      Copyright &copy; 
+      Copyright &copy; 2020
     </div>
   </footer>
 </body>
