responsiveness added to resume area

--- a/index.html
+++ b/index.html
@@ -42,43 +42,44 @@
       </h2>
       <br>
       <br>
+      <br>
       
 <hl>
   <h2>Skills</h2>
-<pre>Management, Management Training and Leadership Development.  
-Sales Development and Strategies
-excellent problem solving skills
-Adobe suites, Excel, Powerpoint, Word, Publisher Maya, POS Systems, Quickbooks
-       <h2>Places</h2><hl> 
-<b>Animax Designs</b>  
-Assembly technician
-March 2019- May 2019
-Animatronics assembly Machining, Keenserts, Hilocks, rivets and other aerospace assemblies.
+<p>Management, Management Training and Leadership Development. <br>
+Sales Development and Strategies<br>
+excellent problem solving skills<br>
+Adobe suites, Excel, Powerpoint, Word, Publisher Maya, POS Systems, Quickbooks</p>
+     <p>  <h2>Places</h2><hl> 
+<b>Animax Designs</b> <br> 
+Assembly technician<br>
+March 2019- May 2019<br>
+Animatronics assembly Machining, Keenserts, Hilocks, rivets and other aerospace assemblies.</p>
 
-<b>Electronic Insiders</b>
-Manager
-January  2018- Jan 2019  
-Managing business and team Running Cables and working on low Voltage Electronics. 
-Mounting TVs, running Electric as well as ethernet and coax. 
-Installing speakers, sound systems and wiring racks. 
+<p><b>Electronic Insiders</b></br>
+Manager<br>
+January  2018- Jan 2019 <br> 
+Managing business and team Running Cables and working on low Voltage Electronics. <br>
+Mounting TVs, running Electric as well as ethernet and coax. <br>
+Installing speakers, sound systems and wiring racks. </p>
 
-<b>Office Depot Inc/ Office Max</b> 
-Nashville, TN area
-Manager
-October 2013- Dec-2017  
-Responsibilities include but not limited to:  
-Managing Associates in the areas of Computer Technical Services, Shipping/Receiving
-Improve efficiency of operations within  my areas of responsibility.
-Training of new associates to achieve top levels of performance.
+<p><b>Office Depot Inc/ Office Max</b> <br>
+Nashville, TN area<br>
+Manager<br>
+October 2013- Dec-2017  <br>
+Responsibilities include but not limited to: <br> 
+Managing Associates in the areas of Computer Technical Services, Shipping/Receiving<br>
+Improve efficiency of operations within  my areas of responsibility.<br>
+Training of new associates to achieve top levels of performance.<br></p>
 
-<b>Urbancaveman</b>
-Franklin, TN 
-Resource Manager 
-2011 - 2013
-Supplier of specialty gaming products for a niche market.
-Owned and managed  a small internet business using most up-to-date resources
- to improve profit, using shipping technology.
-      </pre>
+<p><b>Urbancaveman</b><br>
+Franklin, TN <br>
+Resource Manager <br>
+2011 - 2013<br>
+Supplier of specialty gaming products for a niche market.<br>
+Owned and managed  a small internet business using most up-to-date resources<br>
+ to improve profit, using shipping technology.<br>
+</p>
         <p>
 
         </p>
