fixed spacing issue on resume

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <h2>
         Nashville, TN 
         <br>
-        865.368.5440 (cell)
+        865.368.5440 
         <br>
         lilfin19@gmail.com
       </h2>
@@ -50,8 +50,8 @@
 Sales Development and Strategies<br>
 excellent problem solving skills<br>
 Adobe suites, Excel, Powerpoint, Word, Publisher Maya, POS Systems, Quickbooks</p>
-     <p>  <h2>Places</h2><hl> 
-<b>Animax Designs</b> <br> 
+      <h2>Places</h2><hl> 
+<p><b>Animax Designs</b> <br> 
 Assembly technician<br>
 March 2019- May 2019<br>
 Animatronics assembly Machining, Keenserts, Hilocks, rivets and other aerospace assemblies.</p>
