added link to git hub repository

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,6 +60,7 @@
       <div class="work">
           <a href= "https://jonfinley211.github.io/Project1/">
         <img src="assets/images/travelhubthumb.png" alt="travelHub">
+        <!-- <a href="https://github.com/JonFinley211">GitHub Link</a> -->
 
         <h3>travelHub</h3>
         <!--<a href= "https://jonfinley211.github.io/Project1/"></a> -->
@@ -70,9 +71,15 @@
         <img src="assets/images/trainscedulertumbnail.png" alt="Train Times">
 
         <h3>Train Times</h3>
+
         </a>
       </div>
-
+<div class="work">
+    <a href="https://github.com/JonFinley211">
+      <img src="assets/images/GitHub_Logo.png">
+    <h3>My GitHub</h3>
+    </a>
+    </div>
     </section>
 
   </div>
