--- a/portfolio.html
+++ b/portfolio.html
@@ -80,6 +80,13 @@
     <h3>My GitHub</h3>
     </a>
     </div>
+    <div class="work">
+      
+    <a href="linkedin.com/in/jon-finley-5b79a356">
+      <img src="assets/images/linkedin-branding-CONTENT-2019.jpg">
+      <h3>My Linkedin</h3>
+    </a>
+  </div>
     </section>
 
   </div>
