--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     <div class="container">
       <a href="index.html" id="logo">Jon Finley</a>
       <nav>
-        <a href="index.html">About</a>
+        <a href="index.html">Resume</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
       </nav>
