--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container">
       <a href="index.html" id="logo">Jon Finley</a>
       <nav>
-        <a href="index.html">About</a>
+        <a href="index.html">Resume</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
       </nav>
@@ -29,7 +29,7 @@
 
   <div id="main-container" class="container">
     <section class="main-section">
-      <h1>About Me</h1>
+      <h1>About </h1>
 
       <img src="assets/images/portpic.jpg" class="auth-image" alt="Your Name">
 
