fixed linkedin link

--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,7 @@
     </div>
     <div class="work">
       
-    <a href="linkedin.com/in/jon-finley-5b79a356">
+    <a href="https://www.linkedin.com/in/jon-finley-5b79a356">
       <img src="assets/images/linkedin-branding-CONTENT-2019.jpg">
       <h3>My Linkedin</h3>
     </a>
