--- a/portfolio.html
+++ b/portfolio.html
@@ -74,6 +74,12 @@
 
         </a>
       </div>
+      <div class="work">
+        <a href="https://github.com/JonFinley211/friendfinder">
+          <img src="assets/images/ff1.png">
+        <h3>FriendFinder</h3>
+        </a>
+        </div>
 <div class="work">
     <a href="https://github.com/JonFinley211">
       <img src="assets/images/GitHub_Logo.png">
@@ -87,6 +93,7 @@
       <h3>My Linkedin</h3>
     </a>
   </div>
+  
     </section>
 
   </div>
